--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -1,23 +1,11 @@
-!DOCTYPE html
-
-<html>
- <head> 
-    <h1>Food Shop</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gish new html</title>
 </head>
-  <body>
-     
-his
-
-
-
-
-
-  </body>
-
-
-
-
-
-
-
+<body>
+    hi my name is gish
+</body>
 </html>
